# ini

./: CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  document.cpp
src/include/: document.h
src/include/ini/: document.h
tests/: CMakeLists.txt  main.cpp
tests/samples/: sample_1.ini  sample_2.ini  sample_3.ini
